k8s/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: retroweb
  name: retroweb-service
  labels:
    app: retroweb
spec:
  type: ClusterIP
  selector:
    app: retroweb
  ports:
  - port: 80    
    targetPort: 4000  
    protocol: TCP
